Cleaned up format of references. Also removed several unused references.

--- a/reference.bib
+++ b/reference.bib
@@ -1,14 +1,12 @@
 @inproceedings{chu2018fast,
-  title={Fast, high-radix silicon photonic switches},
+  title={{Fast, high-radix silicon photonic switches}},
   author={Chu, Tao and Qiao, Lei and Tang, Weijie and Guo, Defeng and Wu, Weike},
-  booktitle={2018 Optical Fiber Communications Conference and Exposition (OFC)},
-  pages={1--3},
-  year={2018},
-  organization={IEEE}
+  booktitle={IEEE Optical Fiber Communications Conference (OFC)},
+  year={2018}
 }
 
 @article{seok2016large,
-  title={Large-scale broadband digital silicon photonic switches with vertical adiabatic couplers},
+  title={{Large-scale broadband digital silicon photonic switches with vertical adiabatic couplers}},
   author={Seok, Tae Joon and Quack, Niels and Han, Sangyoon and Muller, Richard S and Wu, Ming C},
   journal={Optica},
   volume={3},
@@ -19,7 +17,7 @@
 }
 
 @article{benjamin2020pulse,
-  title={PULSE: optical circuit switched data center architecture operating at nanosecond timescales},
+  title={{PULSE: optical circuit switched data center architecture operating at nanosecond timescales}},
   author={Benjamin, Joshua L and Gerard, Thomas and Lavery, Domani{\c{c}} and Bayvel, Polina and Zervas, Georgios},
   journal={Journal of Lightwave Technology},
   volume={38},
@@ -30,15 +28,14 @@
 }
 
 @inproceedings{chatzieleftheriou2018larry,
-  title={Larry: Practical network reconfigurability in the data center},
+  title={{Larry: Practical network reconfigurability in the data center}},
   author={Chatzieleftheriou, Andromachi and Legtchenko, Sergey and Williams, Hugh and Rowstron, Antony},
-  booktitle={15th $\{$USENIX$\}$ Symposium on Networked Systems Design and Implementation ($\{$NSDI$\}$ 18)},
-  pages={141--156},
+  booktitle={{NSDI}},
   year={2018}
 }
 
 @misc{forbes_data_center_size,
-  title = {{With The Public Clouds Of Amazon, Microsoft And Google, Big Data Is The Proverbial Big Deal}},
+  title = {{With the public clouds of Amazon, Microsoft and Google, Big Data is the proverbial big deal}},
   author={Pierr Johnson},
   year = {2017},
   howpublished= "\url{https://www.forbes.com/sites/johnsonpierr/2017/06/15/with-the-public-clouds-of-amazon-microsoft-and-google-big-data-is-the-proverbial-big-deal/?sh=80b1efb2ac3c}",
@@ -51,32 +48,30 @@
 }
 
 @misc{tomahawk_4,
-  author = {{Broadcom Tomahawk 4 / BCM56990 Series}},
+  author = {{Broadcom}},
+  title = {{Tomahawk 4 / BCM56990 Series}},
   year = {2016},
   howpublished= {https://docs.broadcom.com/doc/12398014}
 }
 
 @article{burns2016borg,
-  title={Borg, Omega, and Kubernetes},
+  title={{Borg, Omega, and Kubernetes}},
   author={Burns, Brendan and Grant, Brian and Oppenheimer, David and Brewer, Eric and Wilkes, John},
   journal={Queue},
   volume={14},
   number={1},
-  pages={70--93},
-  year={2016},
-  publisher={ACM New York, NY, USA}
+  year={2016}
 }
 
 @inproceedings{zhang2019understanding,
-  title={Understanding lifecycle management complexity of datacenter topologies},
+  title={{Understanding lifecycle management complexity of datacenter topologies}},
   author={Zhang, Mingyang and Mysore, Radhika Niranjan and Supittayapornpong, Sucha and Govindan, Ramesh},
   booktitle={NSDI},
-  pages={235--254},
   year={2019}
 }
 
 @misc{anonrepo,
-  title={Anonymized for double blind review},
+  title={{Anonymized for double blind review}},
   author={Anonymous}
 }
 
@@ -86,47 +81,42 @@
 }
 
 @misc{andreyev2014introducing,
-  title={Introducing data center fabric, the next-generation Facebook data center network},
+  title={{Introducing data center fabric, the next-generation Facebook data center network}},
   author={Andreyev, Alexey},
   year={2014}
 }
 
 @inproceedings{alizadeh2010data,
-  title={Data center TCP (DCTCP)},
+  title={{Data center TCP (DCTCP)}},
   author={Alizadeh, Mohammad and Greenberg, Albert and Maltz, David A and Padhye, Jitendra and Patel, Parveen and Prabhakar, Balaji and Sengupta, Sudipta and Sridharan, Murari},
   booktitle={SIGCOMM},
-  pages={63--74},
   year={2010}
 }
 
 @article{phaal2001inmon,
-  title={InMon corporation's sFlow: A method for monitoring traffic in switched and routed networks},
+  title={{InMon corporation's sFlow: A method for monitoring traffic in switched and routed networks}},
   author={Phaal, Peter and Panchen, Sonia and McKee, Neil},
   year={2001},
   publisher={RFC 3176}
 }
 
 @inproceedings{bojja2016costly,
-  title={Costly circuits, submodular schedules and approximate carath{\'e}odory theorems},
+  title={{Costly circuits, submodular schedules and approximate {C}arath{\'e}odory theorems}},
   author={Bojja Venkatakrishnan, Shaileshh and Alizadeh, Mohammad and Viswanath, Pramod},
   booktitle={SIGMETRICS},
   pages={75--88},
   year={2016}
 }
 
-@article{wang2018neural,
-  title={Neural network meets DCN: Traffic-driven topology adaptation with deep learning},
+@inproceedings{wang2018neural,
+  title={{Neural network meets DCN: Traffic-driven topology adaptation with deep learning}},
   author={Wang, Mowei and Cui, Yong and Xiao, Shihan and Wang, Xin and Yang, Dan and Chen, Kai and Zhu, Jun},
-  journal={Proceedings of the ACM on Measurement and Analysis of Computing Systems},
-  volume={2},
-  number={2},
-  pages={1--25},
-  year={2018},
-  publisher={ACM New York, NY, USA}
+  booktitle={{SIGMETRICS}},
+  year={2018}
 }
 
 @inproceedings{wang2004sflow,
-  title={sFlow: Towards resource-efficient and agile service federation in service overlay networks},
+  title={{sFlow: Towards resource-efficient and agile service federation in service overlay networks}},
   author={Wang, Mea and Li, Baochun and Li, Zongpeng},
   booktitle={24th International Conference on Distributed Computing Systems},
   pages={628--635},
@@ -135,16 +125,14 @@
 }
 
 @inproceedings{zhang2008designing,
-  title={Designing a fault-tolerant network using valiant load-balancing},
+  title={{Designing a fault-tolerant network using valiant load-balancing}},
   author={Zhang-Shen, Rui and McKeown, Nick},
   booktitle={INFOCOM},
-  pages={2360--2368},
-  year={2008},
-  organization={IEEE}
+  year={2008}
 }
 
 @article{yen_ksp,
-  title={Finding the k shortest loopless paths in a network},
+  title={{Finding the k shortest loopless paths in a network}},
   author={Yen, Jin Y},
   journal={Management Science},
   volume={17},
@@ -155,7 +143,7 @@
 }
 
 @inproceedings{even1975complexity,
-  title={On the complexity of time table and multi-commodity flow problems},
+  title={{On the complexity of time table and multi-commodity flow problems}},
   author={Even, Shimon and Itai, Alon and Shamir, Adi},
   booktitle={16th Annual Symposium on Foundations of Computer Science (sfcs 1975)},
   pages={184--193},
@@ -164,7 +152,7 @@
 }
 
 @inproceedings{racke2002minimizing,
-  title={Minimizing congestion in general networks},
+  title={{Minimizing congestion in general networks}},
   author={Racke, Harald},
   booktitle={The 43rd Annual IEEE Symposium on Foundations of Computer Science, 2002. Proceedings.},
   pages={43--52},
@@ -173,7 +161,7 @@
 }
 
 @inproceedings{alizadeh2013pfabric,
-  title={pfabric: Minimal near-optimal datacenter transport},
+  title={{pfabric: Minimal near-optimal datacenter transport}},
   author={Alizadeh, Mohammad and Yang, Shuang and Sharif, Milad and Katti, Sachin and McKeown, Nick and Prabhakar, Balaji and Shenker, Scott},
   booktitle={ACM SIGCOMM Computer Communication Review},
   volume={43},
@@ -190,29 +178,27 @@
 
 @misc{google_netinfra,
   author = {{Google}},
-  title = {{Pulling Back the Curtain on Google?s Network Infrastructure}},
+  title = {Pulling Back the Curtain on {Google's} Network Infrastructure},
   year={2015},
   howpublished= {https://goo.gl/hx0vz3.},
 }
 
 @inproceedings{wang2006cope,
-  title={COPE: traffic engineering in dynamic networks},
+  title={{COPE: Traffic engineering in dynamic networks}},
   author={Wang, Hao and Xie, Haiyong and Qiu, Lili and Yang, Yang Richard and Zhang, Yin and Greenberg, Albert},
-  booktitle={Sigcomm},
-  volume={6},
-  pages={194},
+  booktitle={{SIGCOMM}},
   year={2006}
 }
 
 @inproceedings{mellette2019expanding,
-  title={Expanding across time to deliver bandwidth efficiency and low latency},
+  title={{Expanding across time to deliver bandwidth efficiency and low latency}},
   author={Mellette, William M and Das, Rajdeep and Guo, Yibo and McGuinness, Rob and Snoeren, Alex C and Porter, George},
   booktitle={NSDI},
   year={2020}
 }
 
 @inproceedings{chang2017robust,
-  title={Robust validation of network designs under uncertain demands and failures},
+  title={{Robust validation of network designs under uncertain demands and failures}},
   author={Chang, Yiyang and Rao, Sanjay and Tawarmalani, Mohit},
   booktitle={NSDI},
   pages={347--362},
@@ -220,7 +206,7 @@
 }
 
 @inproceedings{kumar2018semi,
-  title={Semi-oblivious traffic engineering: The road not taken},
+  title={{Semi-oblivious traffic engineering: The road not taken}},
   author={Kumar, Praveen and Yuan, Yang and Yu, Chris and Foster, Nate and Kleinberg, Robert and Lapukhov, Petr and Lim, Chiun Lin and Soul{\'e}, Robert},
   booktitle={15th $\{$USENIX$\}$ Symposium on Networked Systems Design and Implementation ($\{$NSDI$\}$ 18)},
   pages={157--170},
@@ -228,7 +214,7 @@
 }
 
 @article{martins2003new,
-  title={A new implementation of Yen's ranking loopless paths algorithm},
+  title={{A new implementation of Yen's ranking loopless paths algorithm}},
   author={Martins, Ernesto QV and Pascoal, Marta MB},
   journal={Quarterly Journal of the Belgian, French and Italian Operations Research Societies},
   volume={1},
@@ -239,7 +225,7 @@
 }
 
 @inproceedings{jyothi2016measuring,
-  title={Measuring and understanding throughput of network topologies},
+  title={{Measuring and understanding throughput of network topologies}},
   author={Jyothi, Sangeetha Abdu and Singla, Ankit and Godfrey, P and Kolla, Alexandra},
   booktitle={Proceedings of the International Conference for High Performance Computing, Networking, Storage and Analysis},
   pages={65},
@@ -248,7 +234,7 @@
 }
 
 @article{yen1971finding,
-  title={Finding the k shortest loopless paths in a network},
+  title={{Finding the k shortest loopless paths in a network}},
   author={Yen, Jin Y},
   journal={management Science},
   volume={17},
@@ -260,24 +246,20 @@
 
 @inproceedings{bogle2019teavar,
  author = {Bogle, Jeremy and Bhatia, Nikhil and Ghobadi, Manya and Menache, Ishai and Bj{\o}rner, Nikolaj and Valadarsky, Asaf and Schapira, Michael},
- title = {TEAVAR: Striking the Right Utilization-availability Balance in WAN Traffic Engineering},
- booktitle = {Proceedings of the 2019 Conference of the ACM Special Interest Group on Data Communication},
- year = {2019},
- pages = {29--43},
- organization = {ACM},
+ title = {{TEAVAR: Striking the Right Utilization-availability Balance in WAN Traffic Engineering}},
+ booktitle = {SIGCOMM},
+ year = {2019}
 } 
 
 @inproceedings{hong2018b4,
-  title={B4 and after: managing hierarchy, partitioning, and asymmetry for availability and scale in google's software-defined WAN},
+  title={{B4 and after: managing hierarchy, partitioning, and asymmetry for availability and scale in google's software-defined WAN}},
   author={Hong, Chi-Yao and Mandal, Subhasree and Al-Fares, Mohammad and Zhu, Min and Alimi, Richard and Bhagat, Chandan and Jain, Sourabh and Kaimal, Jay and Liang, Shiyu and Mendelev, Kirill and others},
-  booktitle={Proceedings of the 2018 Conference of the ACM Special Interest Group on Data Communication},
-  pages={74--87},
+  booktitle={SIGCOMM},
   year={2018},
-  organization={ACM}
 }
 
 @inproceedings{mogul2017thinking,
-  title={Thinking about availability in large service infrastructures},
+  title={{Thinking about availability in large service infrastructures}},
   author={Mogul, Jeffrey C and Isaacs, Rebecca and Welch, Brent},
   booktitle={Proceedings of the 16th Workshop on Hot Topics in Operating Systems},
   pages={12--17},
@@ -286,7 +268,7 @@
 }
 
 @inproceedings{govindan2016evolve,
-  title={Evolve or die: High-availability design principles drawn from googles network infrastructure},
+  title={{Evolve or die: High-availability design principles drawn from googles network infrastructure}},
   author={Govindan, Ramesh and Minei, Ina and Kallahalla, Mahesh and Koley, Bikash and Vahdat, Amin},
   booktitle={Proceedings of the 2016 ACM SIGCOMM Conference},
   pages={58--72},
@@ -295,13 +277,13 @@
 }
 
 @article{hopps2000analysis,
-  title={Analysis of an equal-cost multi-path algorithm},
+  title={{Analysis of an equal-cost multi-path algorithm}},
   author={Hopps, Christian E},
   year={2000}
 }
 
 @article{goldreich2011basic,
-  title={Basic facts about expander graphs},
+  title={{Basic facts about expander graphs}},
   author={Goldreich, Oded},
   booktitle={Studies in Complexity and Cryptography. Miscellanea on the Interplay between Randomness and Computation},
   pages={451--464},
@@ -310,14 +292,14 @@
 }
 
 @inproceedings{gurobi,
-  author = {Gurobi Optimization, LLC},
-  title = {Gurobi Optimizer Reference Manual},
+  author = {{Gurobi Optimization, LLC}},
+  title = {{Gurobi optimizer reference manual}},
   year = {2019},
   booktitle = {"http://www.gurobi.com"},
 }
 
 @inproceedings{al2010hedera,
-  title={Hedera: dynamic flow scheduling for data center networks.},
+  title={{Hedera: dynamic flow scheduling for data center networks}},
   author={Al-Fares, Mohammad and Radhakrishnan, Sivasankar and Raghavan, Barath and Huang, Nelson and Vahdat, Amin and others},
   booktitle={NSDI},
   volume={10},
@@ -326,7 +308,7 @@
 }
 
 @article{tibshirani2001estimating,
-  title={Estimating the number of clusters in a data set via the gap statistic},
+  title={{Estimating the number of clusters in a data set via the gap statistic}},
   author={Tibshirani, Robert and Walther, Guenther and Hastie, Trevor},
   journal={Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
   volume={63},
@@ -338,16 +320,14 @@
 
 @inproceedings{kassing2017beyond,
  author = {Kassing, Simon and Valadarsky, Asaf and Shahaf, Gal and Schapira, Michael and Singla, Ankit},
- title = {Beyond Fat-trees Without Antennae, Mirrors, and Disco-balls},
+ title = {{Beyond fat-trees without antennae, mirrors, and disco-balls}},
  booktitle={SIGCOMM},
- year = {2017},
- pages = {281--294},
- publisher = {ACM},
+ year = {2017}
 } 
 
 @article{halperin2011augmenting,
  author = {Halperin, Daniel and Kandula, Srikanth and Padhye, Jitendra and Bahl, Paramvir and Wetherall, David},
- title = {Augmenting Data Center Networks with Multi-gigabit Wireless Links},
+ title = {{Augmenting data denter networks with multi-gigabit wireless Links}},
  journal = {SIGCOMM Comput. Commun. Rev.},
  issue_date = {August 2011},
  volume = {41},
@@ -364,52 +344,41 @@
 
 @article{dukkipati2006flowcompletiontime,
  author = {Dukkipati, Nandita and McKeown, Nick},
- title = {Why Flow-completion Time is the Right Metric for Congestion Control},
- journal = {SIGCOMM Comput. Commun. Rev.},
- issue_date = {January 2006},
- volume = {36},
- number = {1},
- month = jan,
- year = {2006},
- issn = {0146-4833},
- pages = {59--62},
- numpages = {4},
- acmid = {1111336},
- publisher = {ACM},
- address = {New York, NY, USA},
+ title = {{Why flow-completion time is the right metric for congestion control}},
+ journal = {SIGCOMM Computer Communications Review (C.C.R)},
+ year = {2006}
 } 
 
 @inproceedings{wen2016flexfly,
-  title={Flexfly: Enabling a reconfigurable dragonfly through silicon photonics},
+  title={{Flexfly: Enabling a reconfigurable Dragonfly through silicon photonics}},
   author={Wen, Ke and Samadi, Payman and Rumley, S{\'e}bastien and Chen, Christine P and Shen, Yiwen and Bahadori, Meisam and Bergman, Keren and Wilke, Jeremiah},
-  booktitle={High Performance Computing, Networking, Storage and Analysis, SC16: International Conference for},
+  booktitle={SC},
   year={2016}
 }
 
 @inproceedings{ghobadi2016projector,
-  title={Projector: Agile reconfigurable data center interconnect},
+  title={{Projector: Agile reconfigurable data center interconnect}},
   author={Ghobadi, Monia and Mahajan, Ratul and Phanishayee, Amar and Devanur, Nikhil and Kulkarni, Janardhan and Ranade, Gireeja and Blanche, Pierre-Alexandre and Rastegarfar, Houman and Glick, Madeleine and Kilper, Daniel},
   booktitle={SIGCOMM},
   year={2016}
 }
 
 @inproceedings{singla2012jellyfish,
-  title={Jellyfish: Networking Data Centers, Randomly},
+  title={{Jellyfish: Networking data centers, randomly}},
   author={Singla, Ankit and Hong, Chi-Yao and Popa, Lucian and Godfrey, Philip Brighten},
   booktitle={NSDI},
   year={2012}
 }
 
 @inproceedings{valadarsky2015xpander,
-  title={Xpander: Unveiling the Secrets of High-Performance Datacenters},
+  title={{Xpander: Unveiling the secrets of high-performance datacenters}},
   author={Valadarsky, Asaf and Dinitz, Michael and Schapira, Michael},
-  booktitle={Proceedings of the 14th ACM Workshop on Hot Topics in Networks},
-  year={2015},
-  month={November}
+  booktitle={{HotNets}},
+  year={2015}
 }
 
 @article{dinitz2017explicit,
-  title = {Explicit Expanding Expanders},
+  title = {{Explicit expanding expanders}},
   author = {Dinitz, Michael and Schapira, Michael and Valadarsky, Asaf},
   journal = {Algorithmica},
   volume= {78},
@@ -420,7 +389,7 @@
 }
 
 @InProceedings{camarero2017random,
-  title = {Random Folded Clos Topologies for Datacenter Networks},
+  title = {{Random folded Clos topologies for datacenter networks}},
   author = {Camarero, Cristobal and Martinez, Carmen and Beivide, Ramon},
   booktitle = {IEEE International Symposium on High Performance Computer Architecture},
   month = {February},
@@ -428,7 +397,7 @@
 }
 
 @inproceedings{hamedazimi2014firefly,
-  title={Firefly: A reconfigurable wireless data center fabric using free-space optics},
+  title={{Firefly: A reconfigurable wireless data center fabric using free-space optics}},
   author={Hamedazimi, Navid and Qazi, Zafar and Gupta, Himanshu and Sekar, Vyas and Das, Samir R and Longtin, Jon P and Shah, Himanshu and Tanwer, Ashish},
   booktitle={SIGCOMM},
   pages={319--330},
@@ -436,17 +405,15 @@
 }
 
 @inproceedings{liu2015scheduling,
-  title={Scheduling techniques for hybrid circuit/packet networks},
+  title={{Scheduling techniques for hybrid circuit/packet networks}},
   author={Liu, He and Mukerjee, Matthew K and Li, Conglong and Feltman, Nicolas and Papen, George and Savage, Stefan and Seshan, Srinivasan and Voelker, Geoffrey M and Andersen, David G and Kaminsky, Michael and others},
-  booktitle={Proceedings of the 11th ACM Conference on Emerging Networking Experiments and Technologies},
-  pages={41},
-  year={2015},
-  organization={ACM}
+  booktitle={{CoNEXT}},
+  year={2015}
 }
 
 @InProceedings{Hamilton2007An,
   author = {Hamilton, James},
-  title = {An Architecture for Modular Data Centers},
+  title = {{An architecture for modular data centers}},
   booktitle = {CIDR},
   month = {January},
   year = {2007}
@@ -471,7 +438,7 @@
 }
 
 @inproceedings{radhakrishnan2013dahu,
-  title={Dahu: Commodity switches for direct connect data center networks},
+  title={{Dahu: Commodity switches for direct connect data center networks}},
   author={Radhakrishnan, Sivasankar and Tewari, Malveeka and Kapoor, Rishi and Porter, George and Vahdat, Amin},
   booktitle={Proceedings of the ninth ACM/IEEE symposium on Architectures for networking and communications systems},
   pages={59--70},
@@ -480,19 +447,17 @@
 }
 
 @inproceedings{delimitrou2012echo,
-  title={ECHO: Recreating network traffic maps for datacenters with tens of thousands of servers},
+  title={{ECHO}: Recreating network traffic maps for datacenters with tens of thousands of servers},
   author={Delimitrou, Christina and Sankar, Sriram and Kansal, Aman and Kozyrakis, Christos},
-  booktitle={Proc. 2012 IEEE International Symposium on Workload Characterization (IISWC)},
+  booktitle={{IEEE International Symposium on Workload Characterization (IISWC)}},
   year={2012}
 }
 
 @inproceedings{benson2010network,
   title={Network traffic characteristics of data centers in the wild},
   author={Benson, Theophilus and Akella, Aditya and Maltz, David A},
-  booktitle={Proceedings of the 10th ACM SIGCOMM conference on Internet measurement},
-  pages={267--280},
-  year={2010},
-  organization={ACM}
+  booktitle={{SIGCOMM}},
+  year={2010}
 }
 
 @inproceedings{benson2009understanding,
@@ -509,27 +474,15 @@
   year={2013}
 }
 
-@article{Mozo2018Forecasting,
-  title={Forecasting short-term data center network traffic load with convolutional neural networks},
-  author={Mozo, Alberto and Ordozgoiti, Bruno and Gomez-Canaval, Sandra},
-  journal={Plos One},
-  volume={13},
-  number={2},
-  year={2018},
-}
-
-
-
-
 @inproceedings{papaioannou2016benefits,
-  title={The Benefits of a Disaggregated Data Centre: A Resource Allocation Approach},
+  title={The Benefits of a Disaggregated Data Centre: {A} Resource Allocation Approach},
   author={Papaioannou, Antonios D and Nejabati, Reza and Simeonidou, Dimitra},
   booktitle={GLOBECOM},
   year={2016}
 }
 
 @inproceedings{jain2012topology,
-  title={Topology-aware vm migration in bandwidth oversubscribed datacenter networks},
+  title={Topology-aware {VM} migration in bandwidth oversubscribed datacenter networks},
   author={Jain, Navendu and Menache, Ishai and Naor, Joseph Seffi and Shepherd, F Bruce},
   booktitle={International Colloquium on Automata, Languages, and Programming},
   year={2012},
@@ -544,14 +497,14 @@
 }
 
 @inproceedings{zhao2018minimal,
-  title={Minimal Rewiring: Efficient Live Expansion for Clos Data Center Networks},
+  title={{Minimal Rewiring}: {Efficient} Live Expansion for {Clos} Data Center Networks},
   author={Zhao, Shizhen and Wang, Rui and Zhou, Junlan and Ong, Joon and Mogul, Jeffrey. C and Vahdat, Amin},
   booktitle={NSDI},
   year={2019},
 }
 
 @article{low1999optimization,
-  title={Optimization flow control I: basic algorithm and convergence},
+  title={Optimization flow control {I}: basic algorithm and convergence},
   author={Low, Steven H and Lapsley, David E},
   journal={IEEE/ACM Transactions on Networking (TON)},
   volume={7},
@@ -563,7 +516,7 @@
 
 @article{osqp,
   author = {Stellato, B. and Banjac, G. and Goulart, P. and Bemporad, A. and Boyd, S.},
-  title = {{OSQP}: An Operator Splitting Solver for Quadratic Programs},
+  title = {{OSQP}: {An} Operator Splitting Solver for Quadratic Programs},
   journal = {ArXiv e-prints},
   year = {2017},
   month = nov,
@@ -645,7 +598,7 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
 }
 
 @inproceedings{zhou2014wcmp,
-  title={WCMP: Weighted cost multipathing for improved fairness in data centers},
+  title={{WCMP}: Weighted cost multipathing for improved fairness in data centers},
   author={Zhou, Junlan and Tewari, Malveeka and Zhu, Min and Kabbani, Abdul and Poutievski, Leon and Singh, Arjun and Vahdat, Amin},
   booktitle={Proceedings of the Ninth European Conference on Computer Systems},
   year={2014}
@@ -659,14 +612,14 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
 }
 
 @inproceedings{rotornet_mellette2017,
-  title={RotorNet: A scalable, low-complexity, optical datacenter network},
+  title={{RotorNet}: {A} scalable, low-complexity, optical datacenter network},
   author={Mellette, William M and McGuinness, Rob and Roy, Arjun and Forencich, Alex and Papen, George and Snoeren, Alex C and Porter, George},
-  booktitle={SIGCOMs},
+  booktitle={SIGCOMM},
   year={2017}
 }
 
 @inproceedings{reactor_liu2014,
-  title={Circuit Switching Under the Radar with REACToR},
+  title={Circuit Switching Under the Radar with {REACToR}},
   author={Liu, He and Lu, Feng and Forencich, Alex and Kapoor, Rishi and Tewari, Malveeka and Voelker, Geoffrey M and Papen, George and Snoeren, Alex C and Porter, George},
   booktitle={NSDI},
   year={2014}
@@ -680,7 +633,7 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
 }
 
 @inproceedings{liu2010scaling,
-  title={Scaling optical interconnects in datacenter networks -- opportunities and challenges for WDM},
+  title={Scaling optical interconnects in datacenter networks -- opportunities and challenges for {WDM}},
   author={Liu, Hong and Lam, Cedric F. and Johnson, Chris},
   booktitle={IEEE 18th Annual Symposium on High Performance Interconnects (HOTI)},
   year={2010}
@@ -705,35 +658,35 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
 }
 
 @inproceedings{cthrough_wang_2011,
-  title={c-Through: Part-time optics in data centers},
+  title={{c-Through}: {Part-time} optics in data centers},
   author={Wang, Guohui and Andersen, David G and Kaminsky, Michael and Papagiannaki, Konstantina and Ng, TS and Kozuch, Michael and Ryan, Michael},
   booktitle={SIGCOMM},
   year={2011},
 }
 
-@book{porter2013integrating,
+@inproceedings{porter2013integrating,
   title={Integrating microsecond circuit switching into the data center},
   author={Porter, George and Strong, Richard and Farrington, Nathan and Forencich, Alex and Chen-Sun, Pang and Rosing, Tajana and Fainman, Yeshaiahu and Papen, George and Vahdat, Amin},
-  booktitle={SIGCOMM},
+  booktitle={{SIGCOMM}},
   year={2013},
 }
 
 @inproceedings{singla2010proteus,
   title={Proteus: a topology malleable data center network},
   author={Singla, Ankit and Singh, Atul and Ramachandran, Kishore and Xu, Lei and Zhang, Yueping},
-  booktitle={Proceedings of the 9th ACM SIGCOMM Workshop on Hot Topics in Networks},
+  booktitle={{HotNets}},
   year={2010},
 }
 
 @inproceedings{singh2015jupiter,
-  title={{Jupiter Rising: A Decade of Clos Topologies and Centralized Control in Google's Datacenter Network}},
+  title={{Jupiter Rising: A decade of Clos topologies and centralized control in Google's datacenter network}},
   author={Singh, Arjun and Ong, Joon and Agarwal, Amit and Anderson, Glen and Armistead, Ashby and Bannon, Roy and Boving, Seb and Desai, Gaurav and Felderman, Bob and Germano, Paulie and others},
   booktitle={SIGCOMM},
   year={2015}
 }
 
 @article{bunnagel1998efficient,
-  title={Efficient implementation of the Goldberg--Tarjan minimum-cost flow algorithm},
+  title={Efficient implementation of the {Goldberg--Tarjan} minimum-cost flow algorithm},
   author={B{\"u}nnagel, Ursula and Korte, Bernhard and Vygen, Jens},
   journal={Optimization Methods and Software},
   volume={10},
@@ -762,71 +715,70 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
 }
 
 @inproceedings{teh2017design,
-  title={Design space exploration of the Dragonfly topology},
+  title={Design space exploration of the {Dragonfly} topology},
   author={Teh, Min Yee and Wilke, Jeremiah J and Bergman, Keren and Rumley, S{\'e}bastien},
   booktitle={International Conference on High Performance Computing},
   year={2017}
 }
 
 @inproceedings{kim2008dragonfly,
-  title={Technology-driven, highly-scalable dragonfly topology},
+  title={Technology-driven, highly-scalable {Dragonfly} topology},
   author={Kim, John and Dally, Wiliam J and Scott, Steve and Abts, Dennis},
-  booktitle={Proc. 35th International Symposium on Computer Architecture (ISCA)},
+  booktitle={{International Symposium on Computer Architecture (ISCA)}},
   year={2008}
 }
 
 @inproceedings{besta2014slim,
-  title={Slim fly: A cost effective low-diameter network topology},
+  title={Slim fly: {A} cost effective low-diameter network topology},
   author={Besta, Maciej and Hoefler, Torsten},
   booktitle={Proceedings of the International Conference for High Performance Computing, Networking, Storage and Analysis},
   year={2014}
 }
 
 @inproceedings{ahn2009hyperx,
-  title={HyperX: topology, routing, and packaging of efficient large-scale networks},
+  title={{HyperX: topology, routing, and packaging of efficient large-scale networks}},
   author={Ahn, Jung Ho and Binkert, Nathan and Davis, Al and McLaren, Moray and Schreiber, Robert S},
   booktitle={Proceedings of the Conference on High Performance Computing, Networking, Storage and Analysis},
   year={2009}
 }
 
 @inproceedings{guo2009bcube,
-  title={BCube: a high performance, server-centric network architecture for modular data centers},
+  title={{BCube: a high performance, server-centric network architecture for modular data centers}},
   author={Guo, Chuanxiong and Lu, Guohan and Li, Dan and Wu, Haitao and Zhang, Xuan and Shi, Yunfeng and Tian, Chen and Zhang, Yongguang and Lu, Songwu},
   booktitle={SIGCOMM},
   year={2009}
 }
 
 @inproceedings{guo2008dcell,
-  title={Dcell: a scalable and fault-tolerant network structure for data centers},
+  title={{DCell: a scalable and fault-tolerant network structure for data centers}},
   author={Guo, Chuanxiong and Wu, Haitao and Tan, Kun and Shi, Lei and Zhang, Yongguang and Lu, Songwu},
   booktitle={SIGCOMM},
   year={2008}
 }
 
 @inproceedings{greenberg2009vl2,
-  title={VL2: a scalable and flexible data center network},
+  title={{VL2: A scalable and flexible data center network}},
   author={Greenberg, Albert and Hamilton, James R and Jain, Navendu and Kandula, Srikanth and Kim, Changhoon and Lahiri, Parantap and Maltz, David A and Patel, Parveen and Sengupta, Sudipta},
   booktitle={SIGCOMM},
   year={2009}
 }
 
 @inproceedings{liu2013f10,
-  title={F10: A Fault-Tolerant Engineered Network},
+  title={{F10: A} Fault-Tolerant Engineered Network},
   author={Liu, Vincent and Halperin, Daniel and Krishnamurthy, Arvind and Anderson, Thomas E},
   booktitle={NSDI},
-  pages={399--412},
   year={2013}
 }
 
 @article{farrington2013facebook,
-  title = {Facebook's Data Center Network Architecture},
+  title = {{Facebook's data center network architecture}},
   author = {Farrington, Nathan and Andreyev, Alexey},
   journal = {IEEE Optical Interconnects Conference},
   year = {2013}
 }
 
 @article{cisco2016,
-  title = {Cisco Data Center Spine-and-Leaf Architecture: Design Overview},
+  title = {Cisco Data Center Spine-and-Leaf Architecture: {Design} Overview},
   author = {{Cisco}},
   journal = {Cisco White Paper},
   year = {2016}
@@ -843,9 +795,7 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
 @misc{polatis_ocs,
   title = {Polatis Optical Circuit Switch},
   year = {2021},
-  howpublished = {https:
-//www.polatis.com/series-7000-384x384-
-port-software-controlled-optical-circuitswitch-sdn-enabled.asp}
+  howpublished = {https://www.polatis.com/series-7000-384x384-port-software-controlled-optical-circuitswitch-sdn-enabled.asp}
 }
 
 @misc{calient,
@@ -854,26 +804,17 @@ port-software-controlled-optical-circuitswitch-sdn-enabled.asp}
 }
 
 @misc{calient_ocs_s320,
-  title = {Calient S-Series, S320},
+  author = {{CALIENT Technologies, Inc.}},
+  title = {{Calient S-Series: S320}},
   year = {2021},
   month = {March},
   howpublished = {https://www.calient.net/resources/datasheets/}
 }
 
 @misc{huawei,
-  author = {{Huawei,}},
+  author = {{Huawei}},
+  title = {{CloudEngine 12800 series data center switches}},
   howpublished = {https://e.huawei.com/us/products/enterprise-networking/switches/data-center-switches/ce12800}
-}
-
-@article{lee2014monolithic,
-  title={Monolithic silicon integration of scaled photonic switch fabrics, CMOS logic, and device driver circuits},
-  author={Lee, Benjamin G and Rylyakov, Alexander V and Green, William MJ and Assefa, Solomon and Baks, Christian W and Rimolo-Donadio, Renato and Kuchta, Daniel M and Khater, Marwan H and Barwicz, Tymon and Reinholm, Carol and others},
-  journal={Journal of Lightwave Technology},
-  volume={32},
-  number={4},
-  pages={743--751},
-  year={2014},
-  publisher={IEEE}
 }
 
 @inproceedings{kandula2009flyways,
@@ -886,7 +827,7 @@ port-software-controlled-optical-circuitswitch-sdn-enabled.asp}
 @inproceedings{kandula2009nature,
   title={The nature of data center traffic: measurements \& analysis},
   author={Kandula, Srikanth and Sengupta, Sudipta and Greenberg, Albert and Patel, Parveen and Chaiken, Ronnie},
-  booktitle={Proceedings of the 9th ACM SIGCOMM conference on Internet measurement},
+  booktitle={SIGCOMM},
   year={2009}
 }
 
@@ -909,7 +850,7 @@ port-software-controlled-optical-circuitswitch-sdn-enabled.asp}
 }
 
 @inproceedings{benson2011microte,
-  title={MicroTE: Fine grained traffic engineering for data centers},
+  title={{MicroTE: Fine grained traffic engineering for data centers}},
   author={Benson, Theophilus and Anand, Ashok and Akella, Aditya and Zhang, Ming},
   booktitle={Proceedings of the Seventh COnference on emerging Networking EXperiments and Technologies},
   year={2011}
@@ -927,7 +868,7 @@ port-software-controlled-optical-circuitswitch-sdn-enabled.asp}
 }
 
 @inproceedings{chen2009incast,
-  title={Understanding TCP incast throughput collapse in datacenter networks},
+  title={Understanding {TCP} incast throughput collapse in datacenter networks},
   author={Chen, Yanpei and Griffith, Rean and Liu, Junda and Katz, Randy H and Joseph, Anthony D},
   booktitle={Proceedings of the 1st ACM Workshop on Research on Enterprise Networking},
   year={2009}
@@ -980,15 +921,15 @@ port-software-controlled-optical-circuitswitch-sdn-enabled.asp}
 }
 
 @inproceedings{ProjectSirius,
-  title = {Project Sirius},
+  title = {{Project Sirius}},
   author   = {{Microsoft Research}},
   booktitle     = {https://www.microsoft.com/en-us/research/project/sirius/}
 }
 
 @inproceedings{ballani2020sirius,
-  title={{Sirius: A Flat Datacenter Network with Nanosecond Optical Switching}},
-  author={Ballani, Hitesh and Costa, Paolo and Behrendt, Raphael and Cletheroe, Daniel and Haller, Istvan and Jozwik, Krzysztof and Karinou, Fotini and Lange, Sophie and Shi, Kai and Thomsen, Benn and others},
-  booktitle={Sigcomm},
+  title={{Sirius: A flat datacenter network with nanosecond optical switching}},
+  author={Ballani, Hitesh and Costa, Paolo and Behrendt, Raphael and Cletheroe, Daniel and Haller, Istvan and Jozwik, Krzysztof and Karinou, Fotini and Lange, Sophie and Shi, Kai and Thomsen, Benn and Williams, Hugh},
+  booktitle={{SIGCOMM}},
   year={2020}
 }
 
@@ -1027,7 +968,7 @@ port-software-controlled-optical-circuitswitch-sdn-enabled.asp}
 }
 
 @inproceedings{zhang2014load,
-  title={Load balancing for multiple traffic matrices using SDN hybrid routing},
+  title={Load balancing for multiple traffic matrices using {SDN} hybrid routing},
   author={Zhang, Junjie and Xi, Kang and Luo, Min and Chao, H Jonathan},
   booktitle={15th International Conference on High Performance Switching and Routing (HPSR)},
   year={2014}
