Updated software references for the anonymized open source code base.

--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,19 @@
+@software{min_yee_teh_2021_4897956,
+  author={Teh, Min Yee},
+  title={{First release of reconfigurable network topology evaluation framework.}},
+  year={2021},
+  publisher={Zenodo},
+  version={v1.0.0},
+  doi={10.5281/zenodo.4897956},
+  url={https://doi.org/10.5281/zenodo.4897956}
+}
+
+@software{netbench,
+  title={{Netbench}},
+  year={2017},
+  url={https://github.com/ndal-eth/netbench}
+}
+
 @inproceedings{chu2018fast,
   title={{Fast, high-radix silicon photonic switches}},
   author={Chu, Tao and Qiao, Lei and Tang, Weijie and Guo, Defeng and Wu, Weike},
@@ -68,11 +84,6 @@
   author={Zhang, Mingyang and Mysore, Radhika Niranjan and Supittayapornpong, Sucha and Govindan, Ramesh},
   booktitle={NSDI},
   year={2019}
-}
-
-@misc{anonrepo,
-  title={{Anonymized for double blind review}},
-  author={Anonymous}
 }
 
 @misc{tech_report,
@@ -169,11 +180,6 @@
   pages={435--446},
   year={2013},
   organization={ACM}
-}
-
-@misc{netbench,
-  author = {{Netbench}},
-  howpublished= {https://github.com/ndal-eth/netbench}
 }
 
 @misc{google_netinfra,
