Added reference to bib file.

--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,10 @@
+@inproceedings{domain_sizing,
+  author={Sankaran, Ganesh C. and Sivalingam, Krishna M.},
+  booktitle={{IEEE International Conference on Cloud Networking (CloudNet)}}, 
+  title={Domain sizing in optical traffic grooming based data center networks}, 
+  year={2015}
+}
+
 @software{min_yee_teh_2021_4897956,
   author={Teh, Min Yee},
   title={{First release of reconfigurable network topology evaluation framework.}},
