Updated formatting of references.

--- a/reference.bib
+++ b/reference.bib
@@ -122,7 +122,6 @@
   title={{Costly circuits, submodular schedules and approximate {C}arath{\'e}odory theorems}},
   author={Bojja Venkatakrishnan, Shaileshh and Alizadeh, Mohammad and Viswanath, Pramod},
   booktitle={SIGMETRICS},
-  pages={75--88},
   year={2016}
 }
 
@@ -137,7 +136,6 @@
   title={{sFlow: Towards resource-efficient and agile service federation in service overlay networks}},
   author={Wang, Mea and Li, Baochun and Li, Zongpeng},
   booktitle={24th International Conference on Distributed Computing Systems},
-  pages={628--635},
   year={2004},
   organization={IEEE}
 }
@@ -153,20 +151,14 @@
   title={{Finding the k shortest loopless paths in a network}},
   author={Yen, Jin Y},
   journal={Management Science},
-  volume={17},
-  number={11},
-  pages={712--716},
-  year={1971},
-  publisher={INFORMS}
+  year={1971}
 }
 
 @inproceedings{even1975complexity,
   title={{On the complexity of time table and multi-commodity flow problems}},
   author={Even, Shimon and Itai, Alon and Shamir, Adi},
-  booktitle={16th Annual Symposium on Foundations of Computer Science (sfcs 1975)},
-  pages={184--193},
+  booktitle={Symposium on Foundations of Computer Science (SFCS)},
   year={1975},
-  organization={IEEE}
 }
 
 @inproceedings{racke2002minimizing,
@@ -214,7 +206,6 @@
   title={{Robust validation of network designs under uncertain demands and failures}},
   author={Chang, Yiyang and Rao, Sanjay and Tawarmalani, Mohit},
   booktitle={NSDI},
-  pages={347--362},
   year={2017}
 }
 
@@ -222,7 +213,6 @@
   title={{Semi-oblivious traffic engineering: The road not taken}},
   author={Kumar, Praveen and Yuan, Yang and Yu, Chris and Foster, Nate and Kleinberg, Robert and Lapukhov, Petr and Lim, Chiun Lin and Soul{\'e}, Robert},
   booktitle={15th $\{$USENIX$\}$ Symposium on Networked Systems Design and Implementation ($\{$NSDI$\}$ 18)},
-  pages={157--170},
   year={2018}
 }
 
@@ -232,7 +222,6 @@
   journal={Quarterly Journal of the Belgian, French and Italian Operations Research Societies},
   volume={1},
   number={2},
-  pages={121--133},
   year={2003},
   publisher={Springer}
 }
@@ -241,20 +230,7 @@
   title={{Measuring and understanding throughput of network topologies}},
   author={Jyothi, Sangeetha Abdu and Singla, Ankit and Godfrey, P and Kolla, Alexandra},
   booktitle={Proceedings of the International Conference for High Performance Computing, Networking, Storage and Analysis},
-  pages={65},
   year={2016},
-  organization={IEEE Press}
-}
-
-@article{yen1971finding,
-  title={{Finding the k shortest loopless paths in a network}},
-  author={Yen, Jin Y},
-  journal={management Science},
-  volume={17},
-  number={11},
-  pages={712--716},
-  year={1971},
-  publisher={INFORMS}
 }
 
 @inproceedings{bogle2019teavar,
@@ -904,10 +880,7 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
 @article{Edmonds1972Theoretical,
   author = {Jack Edmonds and Richard M. Karp},
   title = {Theoretical Improvements in Algorithmic Efficiency for Network Flow Problems},
-  journal = {Journal of the ACM},
-  volume= {19},
-  pages = {248--264},
-  month = {April},
+  journal = {Journal of the ACM},  
   year = {1972}
 }
 
@@ -915,9 +888,6 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   author = {Andrew V. Goldberg and Robert E. Tarjan},
   title = {A New Approach to the Maximum-Flow Problem},
   journal = {Journal of the ACM},
-  volume= {35},
-  pages = {921--940},
-  month = {October},
   year = {1988}
 }
 
