--- a/reference.bib
+++ b/reference.bib
@@ -963,3 +963,11 @@ url="https://doi.org/10.1007/0-306-48332-7_65"
   booktitle={SIGCOMM},
   year={2003}
 }
+
+@misc{lp_solver_complexity,
+  url = {https://arxiv.org/abs/1810.07896},
+  author = {Cohen, Michael B. and Lee, Yin Tat and Song, Zhao},
+  title = {Solving Linear Programs in the Current Matrix Multiplication Time},
+  publisher = {arXiv},
+  year = {2018}
+}
